# lligne-ide

./: package-lock.json  package.json  run.bat  tsconfig.json  vite.config.ts
doc/: ideas.txt  lligne-ast.drawio
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lligne/: mod.rs
src-tauri/src/lligne/code/: mod.rs
src-tauri/src/lligne/code/parsing/: expressions.rs  mod.rs  parser.rs
src-tauri/src/lligne/code/scanning/: mod.rs  scanner.rs  token_types.rs  tokens.rs
src-tauri/src/lligne/code/scanning/token_filters/: leading_trailing_documentation.rs  mod.rs
src-tauri/src/lligne/code/util/: mod.rs  source_pos.rs
src-tauri/src/lligne/ide/: mod.rs  repl.rs
src/lib/: Greet.svelte  Morse.svelte
src/lib/lligne-ide/: Repl.svelte
src/lib/lligne/code/parsing/: Expressions.ts  Parser.ts
src/lib/lligne/code/scanning/: Scanner.ts  Token.ts  TokenType.ts
src/lib/lligne/code/util/: Option.ts  SourcePos.ts
src/lib/lligne/graphs/: BipartiteGraph.ts  CompositeTree.ts  Edges.ts  Graph.ts  HeteroGraph.ts  Keyed.ts  Tree.ts
src/lib/lligne/graphs/impl/: MutableCompositeTree.ts  MutableHeteroGraph1to1.ts  MutableHeteroGraph1toN.ts  MutableHeteroGraphNtoN.ts
src/lib/lligne/util/: Option.ts
tests/lligne/code/parsing/: Parser.test.ts
tests/lligne/code/scanning/: Scanner.test.ts  TokenType.test.ts
tests/lligne/code/scanning/tokenfiltering/: LeadingTrailingDocumentationFilter.test.ts
tests/lligne/code/util/: Option.test.ts
tests/lligne/graphs/: Tree.test.ts
tests/lligne/util/: Option.test.ts
(+3 files in other folders)
