[package]
name = "lligne-ide"
version = "0.1.0"
description = "Lligne compiler and IDE backend"
authors = ["Martin E. Nordberg III"]
license = "Apache 2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
cached = { version = "0.46" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_vector = { version = "0.4.4" }
tauri = { version = "1.5", features = ["shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
